# axum-todo-web-app-rust

./: .gitignore  Cargo.toml  README.md  thunder-collection_Axum Todo App.json
src/: handler.rs  main.rs  middleware.rs  model.rs  route.rs  schema.rs
