[package]
name = "axum-todo-web-app-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.18", features = ["tracing"] }
serde = "1"
serde_json = "1"
tokio = { version = "1.29", features = ["full"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio-native-tls", "sqlite"]}
tower-http = { version = "0.4.0", features = ["cors"] }